# sview

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml
docs/: SUMMARY.md  introduction.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
gui/: main.js  package-lock.json  package.json  preload.js
scripts/: build_cli.sh  build_docker.sh  build_gui.sh  check_requirements.sh  clean.sh  common.sh  create_release.sh  docker_build.sh  generate_examples.sh  install.sh  install_deps.sh  package.sh  package_release.sh  publish.sh  push.sh  release.sh  run_audit.sh  run_tests.sh
src/: gui.rs  launcher.rs  main.rs  scanner.rs  svg2utf.rs
src/memory/: episodic.rs  factual.rs  mod.rs  semantic.rs  working.rs
tests/e2e/: mod.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
